--- a/template/index.html
+++ b/template/index.html
@@ -254,7 +254,7 @@
 					<div class="collapse navbar-collapse text-uppercase" id="navigation">
 						<ul class="navbar-nav ml-lg-auto">
 							<li class="nav-item active mr-lg-3">
-							    <a class="nav-link" href="https://themes.3rdwavemedia.com/instance/bs4/index.html">About <span class="sr-only">(current)</span></a>
+							    <a class="nav-link" href="https://themes.3rdwavemedia.com/instance/bs4/index.html">About</a>
 							</li>
 							<li class="nav-item mr-lg-3">
 							   <a class="nav-link" href="https://themes.3rdwavemedia.com/instance/bs4/projects.html">Projects</a>
